--- a/cms/package.json
+++ b/cms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laynezhang/sanity-studio",
+  "name": "@laynezhang/cms",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
