--- a/packages/sanity-studio/package.json
+++ b/packages/sanity-studio/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@laynezhang/blog-cms",
+    "name": "@laynezhang/sanity-studio",
     "private": true,
     "version": "1.0.0",
     "main": "package.json",
